# qwen-whitebox-experiment

./: .gitignore  Dockerfile  LICENSE  README.md  README_zh.md  environment.yml  pyproject.toml  requirements.txt  setup.py  上传指南.md  仓库完整性检查.md
.github/workflows/: ci.yml
data/: sample_facts.json
docs/: getting_started.md  limitations.md
scripts/: adapter_training_complete.py  adapter_training_fixed.py  c_adapter_wrapper.py  check_environment.py  end_to_end_system.py  end_to_end_system_fixed.py  extract_adapter.py  hidden_state_fixed_strategies.py  hidden_state_multiple_strategies.py  simple_demo.py  simple_hidden_test.py  simple_hidden_test_fixed.py  simple_hidden_test_float32.py  step1_adapter_analysis.py  step1_complete.py  step1_fixed.py  step2_faiss_index.py  step3_performance_test.py  step4_edit_demo.py  step4_edit_demo_fixed.py
src/adapter/: adapter.c  adapter_dims.json  adapter_dims.txt  adapter_model.pt  compile.sh  simple_test_c.py  test_adapter_c.py  test_adapter_c_fixed.py  test_results.json
